<resources>
    <string name="app_name">MadLevel5Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="header_txt">My Notepad</string>
    <string name="last_updated_txt">Last Updated:</string>
    <string name="placeholder_txt">placeholderText</string>
    <string name="title_txt">Title</string>
    <string name="note_txt">Note</string>
    <string name="save_txt">Save</string>
</resources>